Fixed several case bugs in insert, delete and update operations; fixed case bugs due to upper case in table names and primary keys; moved buildLocation to ODataUtils; added ifs for different behavior when dealing with Cassandra; improved code comments