@@ -18,7 +18,6 @@
 
 package org.wso2.carbon.dataservices.core.odata;
 
-import com.datastax.driver.core.BoundStatement;
 import com.datastax.driver.core.ColumnDefinitions;
 import com.datastax.driver.core.ColumnMetadata;
 import com.datastax.driver.core.DataType;
@@ -31,12 +30,11 @@ import com.datastax.driver.core.Statement;
 import com.datastax.driver.core.TableMetadata;
 import org.apache.axis2.databinding.utils.ConverterUtil;
 import org.apache.commons.codec.binary.Base64;
-import org.apache.commons.codec.binary.Hex;
 import org.wso2.carbon.dataservices.common.DBConstants;
 import org.wso2.carbon.dataservices.core.DBUtils;
 import org.wso2.carbon.dataservices.core.DataServiceFault;
 import org.wso2.carbon.dataservices.core.odata.DataColumn.ODataDataType;
-import org.wso2.carbon.dataservices.core.odata.expression.CassandraDBFilterExpressionVisitor;
+import org.wso2.carbon.dataservices.core.odata.expression.CassandraFilterExpressionVisitor;
 import org.apache.olingo.commons.api.http.HttpStatusCode;
 import org.apache.olingo.server.api.ODataApplicationException;
 import org.apache.olingo.server.api.uri.UriInfo;
@@ -53,21 +51,16 @@ import org.apache.olingo.server.api.uri.queryoption.expression.ExpressionVisitEx
 import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
 import java.nio.ByteBuffer;
-import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Date;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Set;
 import java.util.UUID;
-
-import javax.xml.bind.DatatypeConverter;
 
 /**
  * This class implements cassandra datasource related operations for ODataDataHandler.
@@ -135,7 +128,7 @@ public class CassandraDataHandler implements ODataDataHandler {
 
     @Override
     public List<ODataEntry> readTable(String tableName,UriInfo uriInfo) throws ODataServiceFault, ExpressionVisitException, ODataApplicationException {
-        Statement statement = new SimpleStatement(generateCassandraQuery(tableName, uriInfo)); // generates the query to apply to the Cassandra database
+    	Statement statement = new SimpleStatement(generateCassandraQuery(tableName, uriInfo)); // generates the query to apply to the Cassandra database
         
         ResultSet resultSet = this.session.execute(statement);
         Iterator<Row> iterator = resultSet.iterator();
@@ -168,36 +161,46 @@ public class CassandraDataHandler implements ODataDataHandler {
     		if (select.contains("*")) { // if it contains *, it becomes SELECT * FROM
     			select = "*";
     		} else { // otherwise, only specific columns need to be selected
+    			
+    			// List of columns that are part of the primary key
+    			List<String> pKeysColumns = primaryKeys.get(tableName);
+    			    			
+    			// List of the columns listed in $select
     			String[] selectArr = select.split(",");
+    			if (selectArr.length == 0) {
+    				throw new ODataApplicationException("No columns specified in the $select option. ",
+    						HttpStatusCode.BAD_REQUEST.getStatusCode(), Locale.ENGLISH);
+    			}
+    			List<String> selectColumns = Arrays.asList(selectArr);
+        		
+        		// Combines the two lists into the SELECT clause
         		select = "";
-        		for (int i = 0; i < selectArr.length; i++) {
-        			if (!((String) selectArr[i]).startsWith("\""))  { // checks if double quotes are already present (should never happen)
-        				selectArr[i] = "\"" + selectArr[i] + "\""; // Cassandra is case sensitive, yet it converts column names to lower case unless they're within double quotes
-        			}
-        			select += selectArr[i]; // adds the column to the list of columns to select
-        			if (i < selectArr.length - 1) // if it's not the last one, separates it from the next one with a comma
-        				select += ",";
+        		Iterator<String> iter = pKeysColumns.iterator();
+        		String strColumn;
+        		while (iter.hasNext()) {
+        			strColumn = iter.next();
+        			strColumn = CassandraUtils.preserveCase(strColumn); // Cassandra is case sensitive, yet it converts column names to lower case unless they're within double quotes
+        			select += strColumn;
+        			select += ","; // no need to check if it hasNext(), because we previously checked the next List cannot be empty
         		}
+        		iter = selectColumns.iterator(); // adds the columns specified in $select
+        		while (iter.hasNext()) {
+        			strColumn = iter.next();
+        			if (pKeysColumns.contains(strColumn)) // column was already added
+        				continue;
+        			strColumn = CassandraUtils.preserveCase(strColumn); // Cassandra is case sensitive, yet it converts column names to lower case unless they're within double quotes
+        			select += strColumn;
+        			select += ","; // we remove the last comma after the loop
+        		}
+        		select = select.substring(0, select.length()-1);
     		}
     	}
-    	query += select + " FROM " + this.keyspace + "." + tableName; // the SELECT part is added
+    	query += select + " FROM " + this.keyspace + "." + CassandraUtils.preserveCase(tableName); // the SELECT part is added
     	if (filterOpt != null) { // OData $filter option
-    		// visitor to apply the WHERE part; many operators are not supported by Cassandra
-    		CassandraDBFilterExpressionVisitor fev = new CassandraDBFilterExpressionVisitor();
-    		//try {
+    		// Visitor to apply the WHERE part; many operators are not supported by Cassandra
+    		CassandraFilterExpressionVisitor fev = new CassandraFilterExpressionVisitor();
     		String where = " WHERE " + filterOpt.getExpression().accept(fev); // determines the WHERE part
     		query += where; // the WHERE part is added
-    		/*} catch (ExpressionVisitException e) { // error thrown by the visitor
-    			// don't add a WHERE clause
-    			System.out.println("ExpressionVisitException occurred: " + e);
-    			if (select != "*") // needs to crash or there will be inconsistencies
-    				throw new ODataServiceFault("Crashed to avoid inconsistency with SELECT clause");
-    		} catch (ODataApplicationException e) { // an operator is not supported
-    			// don't add a WHERE clause
-    			System.out.println("ODataApplicationException occurred: " + e);
-    			if (select != "*") // needs to crash or there will be inconsistencies
-    				throw new ODataServiceFault("Crashed to avoid inconsistency with SELECT clause");
-    		}*/
     	}
     	if (topOpt != null && orderByOpt == null && countOpt == null) { // OData $top option
     		int limit;
@@ -213,23 +216,19 @@ public class CassandraDataHandler implements ODataDataHandler {
     	if (filterOpt != null) { // necessary for some WHERE conditions
     		query += " ALLOW FILTERING";
     	}
-    	
     	query += ";"; // semicolon at the end of the query
-    	
-    	System.out.println("DB Query is: " + query);
     	return query; // query is ready to be executed
     }
 
     @Override
     public List<ODataEntry> readTableWithKeys(String tableName, ODataEntry keys,UriInfo uriInfo) throws ODataServiceFault {
         List<ColumnMetadata> cassandraTableMetaData = this.session.getCluster().getMetadata().getKeyspace(this.keyspace)
-                                                                  .getTable(tableName).getColumns();
+                                                                  .getTable(CassandraUtils.preserveCase(tableName)).getColumns();
         List<String> pKeys = this.primaryKeys.get(tableName);
         String query = createReadSqlWithKeys(tableName, keys);
         List<Object> values = new ArrayList<>();
         for (String column : keys.getNames()) {
             if (this.tableMetaData.get(tableName).keySet().contains(column) && pKeys.contains(column)) {
-            	//keys.addValue(column, (String) CassandraUtils.oDataConversionForDBQuery(keys.getValue(column)));
                 bindParams(column, keys.getValue(column), values, cassandraTableMetaData);
             }
         }
@@ -238,34 +237,6 @@ public class CassandraDataHandler implements ODataDataHandler {
             statement = this.session.prepare(query);
             this.preparedStatementMap.put(query, statement);
         }
-        
-        System.out.println("Statement: " + statement.getQueryString());
-        Set<String> ss = keys.getNames();
-        System.out.println("Keys: ");
-        for (String skey : ss)
-        	System.out.println("Name: " + skey + ", Value: " + keys.getValue(skey));
-        Object[] objarr = values.toArray();
-        System.out.println("Objarr:");
-        for (Object o : objarr) {
-        	if (o instanceof ByteBuffer) {
-        		ByteBuffer bb = (ByteBuffer) o;
-        		System.out.println("ByteArr: " + bb.array() + ", converted: " + Hex.encodeHexString(bb.array()));
-        	} else {
-            	System.out.println("Obj: " + o);
-        	}
-        }
-        BoundStatement bs = statement.bind(values.toArray());
-        System.out.println("Value 0 is null: " + bs.isNull(0));
-        Object objr = bs.getObject(0);
-        if (objr instanceof byte[]) {
-        	System.out.println("ARR: " + (byte[]) objr + ", : " + Hex.encodeHexString((byte[]) objr));
-        } else {
-        	System.out.println("TYPE: " + objr.getClass());
-        	//System.out.println("ASCHARBUFFER: " + ((ByteBuffer) objr).asCharBuffer().toString());
-        	//System.out.println("FROMHEX: " + Hex.encodeHexString(((ByteBuffer) objr).array()));
-        	System.out.println("Session: " + this.session.getClass());
-        }
-        
         ResultSet resultSet = this.session.execute(statement.bind(values.toArray()));
         List<ODataEntry> entryList = new ArrayList<>();
         Iterator<Row> iterator = resultSet.iterator();
@@ -285,7 +256,7 @@ public class CassandraDataHandler implements ODataDataHandler {
     @Override
     public ODataEntry insertEntityToTable(String tableName, ODataEntry entity) throws ODataServiceFault {
         List<ColumnMetadata> cassandraTableMetaData = this.session.getCluster().getMetadata().getKeyspace(this.keyspace)
-                                                                  .getTable(tableName).getColumns();
+                                                                  .getTable(CassandraUtils.preserveCase(tableName)).getColumns();
         for (String pkey : this.primaryKeys.get(tableName)) {
             if (this.tableMetaData.get(tableName).get(pkey).getColumnType().equals(ODataDataType.GUID) &&
                 entity.getValue(pkey) == null) {
@@ -322,7 +293,7 @@ public class CassandraDataHandler implements ODataDataHandler {
 
     private boolean deleteEntityTableNonTransactional(String tableName, ODataEntry entity) throws ODataServiceFault {
         List<ColumnMetadata> cassandraTableMetaData = this.session.getCluster().getMetadata().getKeyspace(this.keyspace)
-                                                                  .getTable(tableName).getColumns();
+                                                                  .getTable(CassandraUtils.preserveCase(tableName)).getColumns();
         List<String> pKeys = this.primaryKeys.get(tableName);
         String query = createDeleteCQL(tableName);
         List<Object> values = new ArrayList<>();
@@ -342,7 +313,7 @@ public class CassandraDataHandler implements ODataDataHandler {
 
     private boolean deleteEntityInTableTransactional(String tableName, ODataEntry entity) throws ODataServiceFault {
         List<ColumnMetadata> cassandraTableMetaData = this.session.getCluster().getMetadata().getKeyspace(this.keyspace)
-                                                                  .getTable(tableName).getColumns();
+                                                                  .getTable(CassandraUtils.preserveCase(tableName)).getColumns();
         List<String> pKeys = this.primaryKeys.get(tableName);
         String query = createDeleteTransactionalCQL(tableName, entity);
         List<Object> values = new ArrayList<>();
@@ -368,7 +339,7 @@ public class CassandraDataHandler implements ODataDataHandler {
     @Override
     public boolean updateEntityInTable(String tableName, ODataEntry newProperties) throws ODataServiceFault {
         List<ColumnMetadata> cassandraTableMetaData = this.session.getCluster().getMetadata().getKeyspace(this.keyspace)
-                                                                  .getTable(tableName).getColumns();
+                                                                  .getTable(CassandraUtils.preserveCase(tableName)).getColumns();
         List<String> pKeys = this.primaryKeys.get(tableName);
         String query = createUpdateEntityCQL(tableName, newProperties);
         List<Object> values = new ArrayList<>();
@@ -394,7 +365,7 @@ public class CassandraDataHandler implements ODataDataHandler {
     public boolean updateEntityInTableTransactional(String tableName, ODataEntry oldProperties,
                                                     ODataEntry newProperties) throws ODataServiceFault {
         List<ColumnMetadata> cassandraTableMetaData =
-                this.session.getCluster().getMetadata().getKeyspace(this.keyspace).getTable(tableName).getColumns();
+                this.session.getCluster().getMetadata().getKeyspace(this.keyspace).getTable(CassandraUtils.preserveCase(tableName)).getColumns();
         List<String> pKeys = this.primaryKeys.get(tableName);
         String query = createUpdateEntityTransactionalCQL(tableName, oldProperties, newProperties);
         List<Object> values = new ArrayList<>();
@@ -591,7 +562,7 @@ public class CassandraDataHandler implements ODataDataHandler {
         for (String tableName : this.tableList) {
             List<String> primaryKey = new ArrayList<>();
             for (ColumnMetadata columnMetadata : this.session.getCluster().getMetadata().getKeyspace(this.keyspace)
-                                                             .getTable(tableName).getPrimaryKey()) {
+                                                             .getTable(CassandraUtils.preserveCase(tableName)).getPrimaryKey()) {
                 primaryKey.add(columnMetadata.getName());
             }
             primaryKeyMap.put(tableName, primaryKey);
@@ -604,7 +575,7 @@ public class CassandraDataHandler implements ODataDataHandler {
         for (String tableName : this.tableList) {
             Map<String, DataColumn> dataColumnMap = new HashMap<>();
             for (ColumnMetadata columnMetadata : this.session.getCluster().getMetadata().getKeyspace(this.keyspace)
-                                                             .getTable(tableName).getColumns()) {
+                                                             .getTable(CassandraUtils.preserveCase(tableName)).getColumns()) {
                 DataColumn dataColumn;
                 if (this.primaryKeys.get(tableName).contains(columnMetadata.getName())) {
                     dataColumn = new DataColumn(columnMetadata.getName(),
@@ -674,13 +645,7 @@ public class CassandraDataHandler implements ODataDataHandler {
                     values.add(value == null ? null : Integer.parseInt(value));
                     break;
                 case TIMESTAMP:
-                	System.out.println("Value: " + value);
-                	Date date = CassandraUtils.SDF.parse(value);
-                	System.out.println("Date: " + date);
-                	Timestamp t = new Timestamp(date.getTime());
-                	System.out.println("Timestamp: " + t);
-                	values.add(value == null ? null : t);
-                    //values.add(value == null ? null : DBUtils.getTimestamp(value));
+                	values.add(value == null ? null : DBUtils.getTimestamp(value));
                     break;
                 case TIME:
                     values.add(value == null ? null : DBUtils.getTime(value));
@@ -762,14 +727,15 @@ public class CassandraDataHandler implements ODataDataHandler {
     private String createUpdateEntityCQL(String tableName, ODataEntry newProperties) {
         List<String> pKeys = this.primaryKeys.get(tableName);
         StringBuilder sql = new StringBuilder();
-        sql.append("UPDATE ").append(tableName).append(" SET ");
+     // preserveCase is necessary because, if a table or column name is not within double quotes, Cassandra will automatically convert it to lower case
+        sql.append("UPDATE ").append(CassandraUtils.preserveCase(tableName)).append(" SET ");
         boolean propertyMatch = false;
         for (String column : newProperties.getNames()) {
             if (!pKeys.contains(column)) {
                 if (propertyMatch) {
                     sql.append(",");
                 }
-                sql.append(column).append(" = ").append(" ? ");
+                sql.append(CassandraUtils.preserveCase(column)).append(" = ").append(" ? ");
                 propertyMatch = true;
             }
         }
@@ -780,7 +746,7 @@ public class CassandraDataHandler implements ODataDataHandler {
             if (propertyMatch) {
                 sql.append(" AND ");
             }
-            sql.append(key).append(" = ").append(" ? ");
+            sql.append(CassandraUtils.preserveCase(key)).append(" = ").append(" ? ");
             propertyMatch = true;
         }
         return sql.toString();
@@ -798,14 +764,14 @@ public class CassandraDataHandler implements ODataDataHandler {
                                                       ODataEntry newProperties) {
         List<String> pKeys = this.primaryKeys.get(tableName);
         StringBuilder sql = new StringBuilder();
-        sql.append("UPDATE ").append(tableName).append(" SET ");
+        sql.append("UPDATE ").append(CassandraUtils.preserveCase(tableName)).append(" SET ");
         boolean propertyMatch = false;
         for (String column : newProperties.getNames()) {
             if (!pKeys.contains(column)) {
                 if (propertyMatch) {
                     sql.append(",");
                 }
-                sql.append(column).append(" = ").append(" ? ");
+                sql.append(CassandraUtils.preserveCase(column)).append(" = ").append(" ? ");
                 propertyMatch = true;
             }
         }
@@ -816,7 +782,7 @@ public class CassandraDataHandler implements ODataDataHandler {
             if (propertyMatch) {
                 sql.append(" AND ");
             }
-            sql.append(key).append(" = ").append(" ? ");
+            sql.append(CassandraUtils.preserveCase(key)).append(" = ").append(" ? ");
             propertyMatch = true;
         }
         sql.append(" IF ");
@@ -826,7 +792,7 @@ public class CassandraDataHandler implements ODataDataHandler {
                 if (propertyMatch) {
                     sql.append(" AND ");
                 }
-                sql.append(column).append(" = ").append(" ? ");
+                sql.append(CassandraUtils.preserveCase(column)).append(" = ").append(" ? ");
                 propertyMatch = true;
             }
         }
@@ -841,14 +807,14 @@ public class CassandraDataHandler implements ODataDataHandler {
      */
     private String createInsertCQL(String tableName, ODataEntry entry) {
         StringBuilder sql = new StringBuilder();
-        sql.append("INSERT INTO ").append(tableName).append(" (");
+        sql.append("INSERT INTO ").append(CassandraUtils.preserveCase(tableName)).append(" (");
         boolean propertyMatch = false;
         for (DataColumn column : this.tableMetaData.get(tableName).values()) {
             if (entry.getValue(column.getColumnName()) != null) {
                 if (propertyMatch) {
                     sql.append(",");
                 }
-                sql.append(column.getColumnName());
+                sql.append(CassandraUtils.preserveCase(column.getColumnName()));
                 propertyMatch = true;
             }
         }
@@ -876,14 +842,14 @@ public class CassandraDataHandler implements ODataDataHandler {
      */
     private String createReadSqlWithKeys(String tableName, ODataEntry keys) {
         StringBuilder sql = new StringBuilder();
-        sql.append("SELECT * FROM ").append(tableName).append(" WHERE ");
+        sql.append("SELECT * FROM ").append(CassandraUtils.preserveCase(tableName)).append(" WHERE ");
         boolean propertyMatch = false;
         for (DataColumn column : this.tableMetaData.get(tableName).values()) {
             if (keys.getValue(column.getColumnName()) != null) {
                 if (propertyMatch) {
                     sql.append(" AND ");
                 }
-                sql.append(column.getColumnName()).append(" = ").append(" ? ");
+                sql.append(CassandraUtils.preserveCase(column.getColumnName())).append(" = ").append(" ? ");
                 propertyMatch = true;
             }
         }
@@ -898,14 +864,14 @@ public class CassandraDataHandler implements ODataDataHandler {
      */
     private String createDeleteCQL(String tableName) {
         StringBuilder sql = new StringBuilder();
-        sql.append("DELETE FROM ").append(tableName).append(" WHERE ");
+        sql.append("DELETE FROM ").append(CassandraUtils.preserveCase(tableName)).append(" WHERE ");
         List<String> pKeys = this.primaryKeys.get(tableName);
         boolean propertyMatch = false;
         for (String key : pKeys) {
             if (propertyMatch) {
                 sql.append(" AND ");
             }
-            sql.append(key).append(" = ").append(" ? ");
+            sql.append(CassandraUtils.preserveCase(key)).append(" = ").append(" ? ");
             propertyMatch = true;
         }
         return sql.toString();
@@ -919,7 +885,7 @@ public class CassandraDataHandler implements ODataDataHandler {
      */
     private String createDeleteTransactionalCQL(String tableName, ODataEntry entry) {
         StringBuilder sql = new StringBuilder();
-        sql.append("DELETE FROM ").append(tableName).append(" WHERE ");
+        sql.append("DELETE FROM ").append(CassandraUtils.preserveCase(tableName)).append(" WHERE ");
         List<String> pKeys = this.primaryKeys.get(tableName);
         boolean propertyMatch = false;
         for (String key : entry.getNames()) {
@@ -927,7 +893,7 @@ public class CassandraDataHandler implements ODataDataHandler {
                 if (propertyMatch) {
                     sql.append(" AND ");
                 }
-                sql.append(key).append(" = ").append(" ? ");
+                sql.append(CassandraUtils.preserveCase(key)).append(" = ").append(" ? ");
                 propertyMatch = true;
             }
         }
@@ -938,7 +904,7 @@ public class CassandraDataHandler implements ODataDataHandler {
                 if (propertyMatch) {
                     sql.append(" AND ");
                 }
-                sql.append(column).append(" = ").append(" ? ");
+                sql.append(CassandraUtils.preserveCase(column)).append(" = ").append(" ? ");
                 propertyMatch = true;
             }
         }
@@ -956,20 +922,14 @@ public class CassandraDataHandler implements ODataDataHandler {
     }
 
     private ByteBuffer base64DecodeByteBuffer(String data) throws ODataServiceFault {
-        //try {
-        	// START
-        	data = (String) CassandraUtils.oDataConversionForDBQuery(data);
-        	data = data.substring(2);
-            //byte[] buff = Base64.decodeBase64(data.getBytes(DBConstants.DEFAULT_CHAR_SET_TYPE));
-            byte[] buff = DatatypeConverter.parseHexBinary(data);
-            System.out.println("buff: " + buff + ", converted: " + Hex.encodeHexString(buff));
-            // END
+        try {
+            byte[] buff = Base64.decodeBase64(data.getBytes(DBConstants.DEFAULT_CHAR_SET_TYPE));
             ByteBuffer result = ByteBuffer.allocate(buff.length);
             result.put(buff);
             return result;
-        //} catch (UnsupportedEncodingException e) {
-        //    throw new ODataServiceFault(e, "Error in decoding input base64 data: " + e.getMessage());
-        //}
+        } catch (UnsupportedEncodingException e) {
+            throw new ODataServiceFault(e, "Error in decoding input base64 data: " + e.getMessage());
+        }
     }
 
 }
